# habit-tracker

./: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml
migration/: env.py
migration/versions/: 0f3defdee040_add_user_id_relation.py  1a1bd51d4506_add_color_field.py  20530496238c_initial_migration.py  205aa654bb9b_add_habit_and_pomodoro_tables.py  595bde972f7b_add_log_date.py  ad62bf68133a_add_new_columns.py  d593ba205ed8_update_tables.py
src/habit_tracker/: config.py  cors.py  dto.py  logs.py  main.py  middlewares.py  routes.py  run.py
src/habit_tracker/auth/: dependencies.py  repos.py  routes.py  services.py
src/habit_tracker/db/: __init__.py  base.py  engine.py  mixins.py
src/habit_tracker/extensions/: dependencies.py  redis.py
src/habit_tracker/modules/habits/: dependencies.py  dto.py  models.py  repos.py  routes.py  services.py
src/habit_tracker/modules/helper/: routes.py
src/habit_tracker/modules/pomodoros/: dependencies.py  dto.py  models.py  repos.py  routes.py  services.py
src/habit_tracker/scheduler/: setup.py
src/habit_tracker/scheduler/jobs/: check_habit_streak.py
src/habit_tracker/users/: dependencies.py  dto.py  models.py  repos.py  services.py
src/habit_tracker/utils/: helpers.py
